--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zotero",
-  "private": "private",
+  "private": "true",
   "version": "7.0.0",
   "description": "Zotero",
   "main": "",
@@ -42,7 +42,7 @@
     "browserify": "^14.5.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "chokidar": "^2.1.2",
+    "chokidar": "^3.6.0",
     "co-mocha": "^1.2.1",
     "colors": "^1.4.0",
     "eslint": "^8.5.0",
